k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ideamine
  labels:
    name: ideamine
    environment: production
